added renamer.sh